# libGPCGUICanvas

./: CMakeLists.txt  project-config.cmake.in
docs/: log.txt
lib/: CMakeLists.txt
lib/include/gpc/gui/: canvas.hpp  pixelcanvas.hpp  pixelrenderer.hpp  renderer.hpp
lib/include/gpc/gui/_tests/: canvas_tests.hpp
testapp/: CMakeLists.txt  main.cpp
testimage/: CMakeLists.txt  test_image_gen.cpp
testimage/include/gpc/gui/: test_image_gen.hpp
testimage/include/gpc/gui/canvas/: fonts.hpp  test_image_gen.hpp
testsuite/: CMakeLists.txt
testsuite/include/gpc/gui/: canvas_tests.hpp  canvas_testsuite.hpp
